Fix background bug on iPhone

--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,7 @@ html {
     );
     background-repeat: no-repeat;
     background-size: cover;
+    background-attachment: fixed;
 }
 body {
     margin: 2% 20% 0%;
